text wrap fix?

--- a/style/style.css
+++ b/style/style.css
@@ -52,7 +52,6 @@ a {
     word-wrap: break-word;
     white-space: pre-wrap;
     overflow: hidden; 
-    text-overflow: ellipsis; 
 }
 
 
